--- a/FutureTable.html
+++ b/FutureTable.html
@@ -27,13 +27,13 @@
   td{height: 20px;}
   </style>
 
-  <body style="width: 1250px; overflow: auto;">
+  <body style="width: 1300px; overflow: auto;">
 
   <table class="tg" style="position: fixed;">
     <thead>
       <tr>
         <th class="tg-he6h"></th>
-        <th class="tg-he6h" colspan="9"><span style="font-weight:bold;background-color:#CFE2F3; height: 300px; font-size: 18pt;">프린세스 커넥트 Re:Dive! 한국서버 미래 일정표</span></th>
+        <th class="tg-he6h" colspan="9"><span style="font-weight:bold;background-color:#CFE2F3; font-size: 18pt;">프린세스 커넥트 Re:Dive! 한국서버 미래 일정표</span></th>
         <th class="tg-xvcc" style=" text-align:right;"><span style="font-weight:bold;font-style:normal;color:#A61C00">빨간색: 한정</span><br><span style="font-weight:bold;font-style:normal;color:#0B5394">파란색: 배포</span><br><span style="font-weight:bold;font-style:normal;color:#38761D;">초록색: 통상</span><br><span style="font-weight:bold;font-style:normal;color:#999">(최종 수정일: 2020/05/18)</span></th>
       </tr>
     </thead>
@@ -43,7 +43,7 @@
         <td class="tg-kv7e" colspan="2"><span style="font-weight:bold;background-color:#FCE5CD;">이벤트</span></td>
         <td class="tg-kv7e" colspan="4"><span style="font-weight:bold;background-color:#FCE5CD">픽업 가챠</span></td>
         <td class="tg-kv7e" colspan="3" rowspan="2">하드 퀘스트 / 퓨어 메모리 / 상점<br>(퓨어 메모리: 6성 재료)</td>
-        <td class="tg-kv7e" rowspan="2" >비고</td>
+        <td class="tg-kv7e" rowspan="2" style="width: 300px;">비고</td>
       </tr>
       <tr>
         <td class="tg-kv7e"><span style="font-weight:bold;background-color:#FCE5CD">메인 배포</span></td>
@@ -106,7 +106,7 @@
       <td class="tg-kv7e" colspan="2"><span style="font-weight:bold;background-color:#FCE5CD;">이벤트</span></td>
       <td class="tg-kv7e" colspan="4"><span style="font-weight:bold;background-color:#FCE5CD">픽업 가챠</span></td>
       <td class="tg-kv7e" colspan="3" rowspan="2">하드 퀘스트 / 퓨어 메모리 / 상점<br>(퓨어 메모리: 6성 재료)</td>
-      <td class="tg-kv7e" rowspan="2">비고</td>
+      <td class="tg-kv7e" rowspan="2" style="width: 300px">비고</td>
     </tr>
     <tr>
       <td class="tg-kv7e"><span style="font-weight:bold;background-color:#FCE5CD">메인 배포</span></td>
