--- a/ET.html
+++ b/ET.html
@@ -1,3 +1,11 @@
+<html>
+<head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="styles.css">
+        <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+</head>
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;}
 .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
@@ -9,6 +17,15 @@
 .tg .tg-f4yw{background-color:#FFF;text-align:center;vertical-align:middle}
 .tg .tg-7yig{background-color:#FFF;text-align:center;vertical-align:top}
 </style>
+
+      <div id='cssmenu'>
+        <ul>
+           <li><a href='https://yeonnaru.github.io/Naru/CHC'><span>일정표</span></a></li>
+           <li><a href='https://yeonnaru.github.io/Naru/CH'><span>일정표(확장)</span></a></li>
+           <li class='active'><a href='#'><span>전용장비</span></a></li>
+        </ul>
+      </div>
+
 <table class="tg">
 <thead>
   <tr>
@@ -471,3 +488,4 @@
   </tr>
 </tbody>
 </table>
+</html>
