--- a/CH.html
+++ b/CH.html
@@ -1,4 +1,11 @@
 <html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="styles.css">
+        <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    </head>
 <style type="text/css">
     body {margin: 0; padding: 0;}
   .tg  {border-collapse:collapse;border-spacing:0;}
@@ -84,7 +91,13 @@
     </tbody>
   </table>
 -->
-
+  <div id='cssmenu'>
+    <ul>
+       <li><a href='https://yeonnaru.github.io/Naru/CHC'><span>일정표</span></a></li>
+       <li class='active'><a href='#'><span>일정표(확장)</span></a></li>
+       <li><a href='https://yeonnaru.github.io/Naru/ET'><span>전용장비</span></a></li>
+    </ul>
+  </div>
 
   <table class="tg">
   <thead>
