--- a/CHC.html
+++ b/CHC.html
@@ -1,4 +1,11 @@
 <html>
+    <head>
+            <meta charset="utf-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <link rel="stylesheet" href="styles.css">
+            <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    </head>
 <style type="text/css">
     body {margin: 0; padding: 0;}
   .tg  {border-collapse:collapse;border-spacing:0;}
@@ -20,9 +27,10 @@
   .tg .tg-w4w7{background-color:#FFF;border-color:#000000;text-align:center;vertical-align:top}
   td{height: 20px;}
   </style>
-
-  <body style="width: 1250px; overflow: auto;">
+  <body>
 <!--
+  <body style="width: 1250px; overflow: auto;">
+
   <table class="tg" style="position: fixed;">
     <thead>
       <tr>
@@ -84,7 +92,13 @@
     </tbody>
   </table>
 -->
-
+  <div id='cssmenu'>
+    <ul>
+       <li class='active'><a href='#'><span>일정표</span></a></li>
+       <li><a href='https://yeonnaru.github.io/Naru/CH'><span>일정표(확장)</span></a></li>
+       <li><a href='https://yeonnaru.github.io/Naru/ET'><span>전용장비</span></a></li>
+    </ul>
+  </div>
 
   <table class="tg">
   <thead>
