--- a/ET.html
+++ b/ET.html
@@ -7,6 +7,7 @@
         <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 </head>
 <style type="text/css">
+body {margin: 0; padding: 0;}
 .tg  {border-collapse:collapse;border-spacing:0;}
 .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
   overflow:hidden;padding:0px 0px;word-break:normal;}
@@ -17,7 +18,7 @@
 .tg .tg-f4yw{background-color:#FFF;text-align:center;vertical-align:middle}
 .tg .tg-7yig{background-color:#FFF;text-align:center;vertical-align:top}
 </style>
-
+<body>
       <div id='cssmenu'>
         <ul>
            <li><a href='https://yeonnaru.github.io/Naru/CHC'><span>일정표</span></a></li>
@@ -488,4 +489,5 @@
   </tr>
 </tbody>
 </table>
+</body>
 </html>
