--- a/CH.html
+++ b/CH.html
@@ -552,7 +552,7 @@
       <td class="tg-4vrb"></td>
       <td class="tg-4vrb"></td>
       <td class="tg-4vrb"></td>
-      <td class="tg-vhtn"></td>
+      <td class="tg-vhtn"><img src="https://i.ibb.co/dPbHTCK/image.jpg" width="100" height="100"></td>
       <td class="tg-fcvt" rowspan="3">[이벤트] 한여름의 마호마호 왕국<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;~물가의 소울서머!<br>[상점] 아유미 추가<br>[전용장비] 10차 전용장비 추가</td>
     </tr>
     <tr>
