--- a/CHC.html
+++ b/CHC.html
@@ -540,7 +540,7 @@
       <td class="tg-4vrb"></td>
       <td class="tg-4vrb"></td>
       <td class="tg-4vrb"></td>
-      <td class="tg-vhtn"></td>
+      <td class="tg-vhtn"><img src="https://i.ibb.co/dPbHTCK/image.jpg" width="100" height="100"></td>
     </tr>
     <tr>
       <td class="tg-4vrb"><span style="background-color:#FFF">카오리</span></td>
