--- a/ET.html
+++ b/ET.html
@@ -253,7 +253,7 @@ body {margin: 0; padding: 0;}
   <tr>
     <td class="tg-nrix" rowspan="2">1차 복각<br>전용장비</td>
     <td class="tg-f4yw"><img src="https://i.ibb.co/BscXDcP/image.png" width="110" height="110"></td>
-    <td class="tg-f4yw"><img src="https://i.ibb.co/dmprCVQ/image.png" width="110" height="110"></td>
+    <td class="tg-f4yw"><img src="https://i.ibb.co/HNfVScM/image.png" width="110" height="110"></td>
     <td class="tg-f4yw"><img src="https://i.ibb.co/HzyYpQG/image.png" width="110" height="110"></td>
     <td class="tg-f4yw"></td>
     <td class="tg-f4yw"></td>
