--- a/CH.html
+++ b/CH.html
@@ -1247,35 +1247,70 @@
       <td class="tg-4vrb"><img src="https://i.ibb.co/rbt7NKV/image.png" width="100" height="100"></td>
       <td class="tg-4vrb"><img src="https://i.ibb.co/jybkkmn/image.png" width="100" height="100"></td>
     <td class="tg-4vrb"><img src="https://i.ibb.co/k9XvD96/image.png" width="100" height="100"></td>
-      <td class="tg-4vrb"></td>
-      <td class="tg-4vrb"></td>
+      <td class="tg-4vrb"><img src="https://i.ibb.co/cJdm2Zg/image.png" width="100" height="100"></td>
+      <td class="tg-4vrb"><img src="https://i.ibb.co/ZKSCSYN/image.png" width="100" height="100"></td>
       <td class="tg-4vrb"><img src="https://i.ibb.co/MsM16CR/image.png" width="100" height="100"></td>
     <td class="tg-4vrb"><img src="https://i.ibb.co/qsSD91m/image.png" width="100" height="100"></td>
       <td class="tg-4vrb"></td>
-      <td class="tg-vhtn"></td>
-      <td class="tg-fcvt" rowspan="3">[이벤트] 이상한 나라의 리노<br>[프린세스 페스] 프린세스 콧코로 픽업</td>
+      <td class="tg-vhtn"><img src="https://i.ibb.co/FbRPCtY/image.jpg" width="100" height="100"></td>
+      <td class="tg-fcvt" rowspan="3">[이벤트] 이상한 나라의 리노<br>[프린세스 페스] 프린세스 콧코로 픽업<br>[상점] 프린세스 콧코로 추가</td>
     </tr>
     <tr>
       <td class="tg-4vrb"><span style="background-color:#FFF">아유미</span></td>
       <td class="tg-4vrb"><span style="background-color:#FFF">카야</span></td>
       <td class="tg-4vrb"><span style="background-color:#FFF">리노</span></td>
-      <td class="tg-4vrb"></td>
-      <td class="tg-4vrb"></td>
+      <td class="tg-4vrb"><span style="background-color:#FFF">사렌</span></td>
+      <td class="tg-4vrb"><span style="background-color:#FFF">스즈나</span></td>
       <td class="tg-4vrb"><span style="background-color:#FFF">콧코로</span></td>
       <td class="tg-4vrb"><span style="background-color:#FFF">미후유</span></td>
       <td class="tg-4vrb"></td>
-      <td class="tg-4vrb"></td>
+      <td class="tg-4vrb"><span style="background-color:#FFF">프린세스 콧코로</span></td>
     </tr>
     <tr>
-      <td class="tg-eigh"><span style="font-weight:bold;background-color:#EFEFEF">원더랜드</span></td>
+      <td class="tg-eigh"><span style="font-weight:bold;color:#F00;background-color:#EFEFEF">원더랜드</span></td>
       <td class="tg-eigh"></td>
       <td class="tg-eigh"><span style="font-weight:bold;background-color:#EFEFEF">원더랜드</span></td>
-      <td class="tg-eigh"></td>
-      <td class="tg-eigh"></td>
+      <td class="tg-eigh"><span style="font-weight:bold;color:#F00;background-color:#EFEFEF">수영복</span></td>
+      <td class="tg-eigh"><span style="font-weight:bold;color:#F00;background-color:#EFEFEF">수영복</span></td>
       <td class="tg-kjlt"><span style="font-weight:bold;color:#F00;background-color:#EFEFEF">프린세스 페스</span></td>
       <td class="tg-eigh"><span style="font-weight:bold;background-color:#EFEFEF">퓨어 메모리</span></td>
       <td class="tg-eigh"></td>
+      <td class="tg-eigh"><span style="font-weight:bold;background-color:#EFEFEF">마스터 상점</span></td>
+    </tr>
+    <tr>
+      <td class="tg-xwyw" rowspan="3">07월</br>후반</td>
+      <td class="tg-4vrb"><img src="https://i.ibb.co/92RfmRy/image.png" width="100" height="100"></td>
+      <td class="tg-4vrb"><img src="https://i.ibb.co/FXp0126/image.jpg" width="100" height="100"></td>
+      <td class="tg-4vrb"><img src="https://i.ibb.co/ynWt9Vy/image.png" width="100" height="100"></td>
+      <td class="tg-4vrb"><img src="https://i.ibb.co/FDTCz0G/image.png" width="100" height="100"></td>
+      <td class="tg-4vrb"></td>
+      <td class="tg-4vrb"></td>
+      <td class="tg-4vrb"><img src="https://i.ibb.co/7JJKHfY/image.jpg" width="100" height="100"></td>
+      <td class="tg-4vrb"><img src="https://i.ibb.co/mcbDScF/image.jpg" width="100" height="100"></td>
+      <td class="tg-4vrb"><img src="https://i.ibb.co/4m9jqqs/image.jpg" width="100" height="100"></td>
+      <td class="tg-fcvt" rowspan="3">[복각 이벤트] 스즈나 레인보우 스테이지<br>[전용장비] 9차 복각 전용장비 추가<br>[상점] 수영복 사렌 추가<br>[상점] 수영복 스즈나 추가<br>[루나의 탑] 430층 추가<br>[상시 이벤트] 데인저러스 바캉스!<br>                  바닷가의 미식가 프린세스</td>
+    </tr>
+    <tr>
+      <td class="tg-4vrb"><span style="background-color:#FFF">이오</span></td>
+      <td class="tg-4vrb"><span style="background-color:#FFF">미사키</span></td>
+      <td class="tg-4vrb"><span style="background-color:#FFF">이노리</span></td>
+      <td class="tg-4vrb"><span style="background-color:#FFF">크리스티나</span></td>
+      <td class="tg-4vrb"></td>
+      <td class="tg-4vrb"></td>
+      <td class="tg-4vrb"><span style="background-color:#FFF">루나</span></td>
+      <td class="tg-4vrb"><span style="background-color:#FFF">수영복 사렌</span></td>
+      <td class="tg-4vrb"><span style="background-color:#FFF">수영복 스즈나</span></td>
+    </tr>
+    <tr>
+      <td class="tg-eigh"><span style="font-weight:bold;color:#F00;background-color:#EFEFEF">수영복</span></td>
       <td class="tg-eigh"></td>
+      <td class="tg-eigh"></td>
+      <td class="tg-eigh"><span style="font-weight:bold;color:#F00;background-color:#EFEFEF">크리스마스</span></td>
+      <td class="tg-eigh"></td>
+      <td class="tg-kjlt"></td>
+      <td class="tg-eigh"><span style="font-weight:bold;background-color:#EFEFEF">하드 퀘스트</span></td>
+      <td class="tg-eigh"><span style="font-weight:bold;background-color:#EFEFEF">마스터 상점</span></td>
+      <td class="tg-eigh"><span style="font-weight:bold;background-color:#EFEFEF">마스터 </span></td>
     </tr>
   </tbody>
   </table>
