--- a/CH.html
+++ b/CH.html
@@ -1288,7 +1288,7 @@
       <td class="tg-4vrb"><img src="https://i.ibb.co/7JJKHfY/image.jpg" width="100" height="100"></td>
       <td class="tg-4vrb"><img src="https://i.ibb.co/mcbDScF/image.jpg" width="100" height="100"></td>
       <td class="tg-4vrb"><img src="https://i.ibb.co/4m9jqqs/image.jpg" width="100" height="100"></td>
-      <td class="tg-fcvt" rowspan="3">[복각 이벤트] 스즈나 레인보우 스테이지<br>[전용장비] 9차 복각 전용장비 추가<br>[상점] 수영복 사렌 추가<br>[상점] 수영복 스즈나 추가<br>[루나의 탑] 430층 추가<br>[상시 이벤트] 데인저러스 바캉스!<br>                  바닷가의 미식가 프린세스</td>
+      <td class="tg-fcvt" rowspan="3">[복각 이벤트] 스즈나 레인보우 스테이지<br>[전용장비] 9차 복각 전용장비 추가<br>[상점] 수영복 사렌 추가<br>[상점] 수영복 스즈나 추가<br>[루나의 탑] 430층 추가<br>[상시 이벤트] 데인저러스 바캉스!<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;바닷가의 미식가 프린세스</td>
     </tr>
     <tr>
       <td class="tg-4vrb"><span style="background-color:#FFF">이오</span></td>
