--- a/CH.html
+++ b/CH.html
@@ -1310,7 +1310,7 @@
       <td class="tg-kjlt"></td>
       <td class="tg-eigh"><span style="font-weight:bold;background-color:#EFEFEF">하드 퀘스트</span></td>
       <td class="tg-eigh"><span style="font-weight:bold;background-color:#EFEFEF">마스터 상점</span></td>
-      <td class="tg-eigh"><span style="font-weight:bold;background-color:#EFEFEF">마스터 </span></td>
+      <td class="tg-eigh"><span style="font-weight:bold;background-color:#EFEFEF">마스터 상점</span></td>
     </tr>
   </tbody>
   </table>
