--- a/CHC.html
+++ b/CHC.html
@@ -1215,12 +1215,12 @@
       <td class="tg-4vrb"><img src="https://i.ibb.co/rbt7NKV/image.png" width="100" height="100"></td>
       <td class="tg-4vrb"><img src="https://i.ibb.co/jybkkmn/image.png" width="100" height="100"></td>
     <td class="tg-4vrb"><img src="https://i.ibb.co/k9XvD96/image.png" width="100" height="100"></td>
-      <td class="tg-4vrb"></td>
-      <td class="tg-4vrb"></td>
+      <td class="tg-4vrb"><img src="https://i.ibb.co/cJdm2Zg/image.png" width="100" height="100"></td>
+      <td class="tg-4vrb"><img src="https://i.ibb.co/ZKSCSYN/image.png" width="100" height="100"></td>
       <td class="tg-4vrb"><img src="https://i.ibb.co/MsM16CR/image.png" width="100" height="100"></td>
     <td class="tg-4vrb"><img src="https://i.ibb.co/qsSD91m/image.png" width="100" height="100"></td>
       <td class="tg-4vrb"></td>
-      <td class="tg-vhtn"></td>
+      <td class="tg-vhtn"><img src="https://i.ibb.co/FbRPCtY/image.jpg" width="100" height="100"></td>
     </tr>
     <tr>
       <td class="tg-4vrb"><span style="background-color:#FFF">아유미</span></td>
