--- a/ET.html
+++ b/ET.html
@@ -487,6 +487,30 @@ body {margin: 0; padding: 0;}
     <td class="tg-f4yw"></td>
     <td class="tg-f4yw"></td>
   </tr>
+  <tr>
+    <td class="tg-nrix" rowspan="2">7월</td>
+    <td class="tg-nrix" rowspan="2">9차 복각<br>전용장비</td>
+    <td class="tg-f4yw"><img src="https://i.ibb.co/cJdm2Zg/image.png" width="100" height="100"></td>
+    <td class="tg-f4yw"><img src="https://i.ibb.co/ZKSCSYN/image.png" width="100" height="100"></td>
+    <td class="tg-f4yw"><img src="https://i.ibb.co/92RfmRy/image.png" width="100" height="100"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+  </tr>
+  <tr>
+    <td class="tg-f4yw"><span style="background-color:#FFF">수영복 사렌</span></td>
+    <td class="tg-f4yw"><span style="background-color:#FFF">수영복 스즈나</span></td>
+    <td class="tg-f4yw"><span style="background-color:#FFF">수영복 이오</span></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+  </tr>
 </tbody>
 </table>
 </body>
