--- a/CHC.html
+++ b/CHC.html
@@ -1316,7 +1316,7 @@
 <tr style="height: 20px;">
 <td style="width: 48px; height: 60px; text-align: center;" rowspan="3">08월</br>후반</td>
 <td style="width: 100px; height: 20px; text-align: center;"><img src="https://i.ibb.co/t377pLH/image.png" width="100" height="100" /></td>
-<td style="width: 100px; height: 20px; text-align: center;"><img src="" width="100" height="100" /></td>
+<td style="width: 100px; height: 20px; text-align: center;"><img src="https://i.ibb.co/FXTqP8N/image.png" width="100" height="100" /></td>
 <td style="width: 100px; height: 20px; text-align: center;"><img src="https://i.ibb.co/4VpH19F/image.png" width="100" height="100" /></td>
 <td style="width: 100px; height: 20px; text-align: center;"><img src="https://i.ibb.co/1zf1FM8/image.png" width="100" height="100" /></td>
 <td style="width: 100px; height: 20px; text-align: center;"><img src="https://i.ibb.co/bLK4ZDV/image.png" width="100" height="100" /></td>
