--- a/CHC.html
+++ b/CHC.html
@@ -4,14 +4,15 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <link rel="stylesheet" href="styles.css">
+            <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
             <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     </head>
 <style type="text/css">
     body {margin: 0; padding: 0;}
   .tg  {border-collapse:collapse;border-spacing:0;}
-  .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  .tg td{border-color:black;border-style:solid;border-width:1px;font-family:'Nanum Gothic', sans-serif;font-size:14px;
     overflow:hidden;padding:0px 0px;word-break:normal;}
-  .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  .tg th{border-color:black;border-style:solid;border-width:1px;font-family:'Nanum Gothic', sans-serif;font-size:14px;
     font-weight:normal;overflow:hidden;padding:0px 0px;word-break:normal;}
   .tg .tg-xvcc{background-color:#CFE2F3;border-color:#000000;color:#A61C00;font-weight:bold;text-align:center;vertical-align:middle}
   .tg .tg-fcvt{background-color:#FFF;border-color:#000000;text-align:left;vertical-align:middle; font-size: 12px; font-weight: bold; padding-left: 5px; padding-right: 5px;}
