--- a/CHC.html
+++ b/CHC.html
@@ -9,6 +9,8 @@
     </head>
 <style type="text/css">
     body {margin: 0; padding: 0;}
+    td {font-family:'Nanum Gothic', sans-serif;}
+    span {font-family:'Nanum Gothic', sans-serif;}
   .tg  {border-collapse:collapse;border-spacing:0;}
   .tg td{border-color:black;border-style:solid;border-width:1px;font-family:'Nanum Gothic', sans-serif;font-size:14px;
     overflow:hidden;padding:0px 0px;word-break:normal;}
