--- a/ET.html
+++ b/ET.html
@@ -511,6 +511,55 @@ body {margin: 0; padding: 0;}
     <td class="tg-f4yw"></td>
     <td class="tg-f4yw"></td>
   </tr>
+
+  <tr>
+    <td class="tg-nrix" rowspan="4">8월</td>
+    <td class="tg-nrix" rowspan="2">10차 복각<br>전용장비</td>
+    <td class="tg-f4yw"><img src="https://i.ibb.co/DDNdgnK/image.png" width="100" height="100"></td>
+    <td class="tg-f4yw"><img src="https://i.ibb.co/XF5zrxw/image.png" width="100" height="100"></td>
+    <td class="tg-f4yw"><img src="https://i.ibb.co/t377pLH/image.png" width="100" height="100"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+  </tr>
+  <tr>
+    <td class="tg-f4yw"><span style="background-color:#FFF">수영복 마코토</span></td>
+    <td class="tg-f4yw"><span style="background-color:#FFF">수영복 마호</span></td>
+    <td class="tg-f4yw"><span style="background-color:#FFF">수영복 카오리</span></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+  </tr>
+  <tr>
+    <td class="tg-nrix" rowspan="2">2차 페스<br>전용장비</td>
+    <td class="tg-f4yw"><img src="https://i.ibb.co/G7DVxHn/image.png" width="100" height="100"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+  </tr>
+  <tr>
+    <td class="tg-f4yw"><span style="background-color:#FFF">무이미</span></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+    <td class="tg-f4yw"></td>
+  </tr>
 </tbody>
 </table>
 </body>
